# APR-v2-Gold

./: .gitattributes  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.py  sitecustomize.py
.github/workflows/: ci.yml
benchmarks/external_papers_dev/: README.md  manifest.yaml
benchmarks/external_papers_holdout/: README.md  manifest.yaml
benchmarks/goldset/: README.md  manifest.yaml
benchmarks/goldset_dev/: README.md  manifest.yaml
benchmarks/goldset_holdout/: README.md  manifest.yaml
contracts/active/: audit_input.schema.json  canonical_audit_record.schema.json  defense_readiness_record.schema.json  manifest.yaml  pdf_annotation_manifest.schema.json  policy_layer.yaml  question_challenge_record.schema.json  question_registry.schema.json  question_registry.yaml  system_prompt.md  user_prompt_template.md
contracts/legacy/: README.md
docs/: ARCHITECTURE.md  BENCHMARK_POLICY.md  BENCHMARK_PROTOCOL.md  CALIBRATION_PROTOCOL.md  CANONICAL_AUDIT_RECORD.md  CONTRACT_POLICY.md  DEVELOPMENT.md  EVIDENCE_ANCHORS.md  EXECUTION_MODEL.md  GOLDSET_CASE_SCHEMA.md  GOLDSET_PROTOCOL.md  IMPLEMENTATION_ROADMAP.md  MIGRATION_POLICY.md  PACK_INTERFACE.md  PHASE_AB_EXTENSION.md  QUESTION_REGISTRY_GUIDANCE.md  RELEASE_POLICY.md  REPO_CHARTER.md  SPEC_IMPLEMENTATION_MATRIX.md  SYSTEM_BOUNDARY.md
examples/: README.md
fixtures/: README.md
policy/: README.md
scripts/: build_release.py  summarize_goldset.py  validate_contract.py  validate_goldset.py  validate_repo_lockstep.py
src/: apr_core_bootstrap.py
src/apr_core/: __init__.py  (+15 more)
tests/: conftest.py
(+142 files in other folders)
